--- a/OpenAppsShowcase/.classpath
+++ b/OpenAppsShowcase/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="lib/jaxrs-api-2.2-beta-1.jar"/>
 	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
+	<classpathentry kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
