--- a/OpenAppsShowcase/skeletons/web/WEB-INF/web.xml
+++ b/OpenAppsShowcase/skeletons/web/WEB-INF/web.xml
@@ -5,4 +5,13 @@
 	version="2.4">
 
  
+ 	<filter>
+		<filter-name>CORSFilter</filter-name>
+		<filter-class>ro.mysmartcity.web.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORSFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+ 
 </web-app>
