- get entire entity content, not just urls - add support for sortBy and sortOrder

--- a/OpenAppsShowcase/build.xml
+++ b/OpenAppsShowcase/build.xml
@@ -55,6 +55,7 @@
 			<fileset dir="${build.classes.dir}">
 				<include name="**/business/**/*.class" />
 				<include name="**/bean**/*.class" />
+				<include name="**/util**/*.class" />
 			</fileset>
 			<fileset dir="${skeleton.ejb.dir}/">
 				<include name="**/*.xml" />
